{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 426,
  "lineage": "06043b22-04f7-0f9c-3ed6-5314f75b29df",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06dff04ee121a54cc",
            "association_id": "eipassoc-0988b5e40dfc6e417",
            "domain": "vpc",
            "id": "eipalloc-06dff04ee121a54cc",
            "instance": "i-01375b9ff9fd6b3cf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06ebb2cebfdada081",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_ip": "10.0.1.93",
            "public_dns": "ec2-54-159-86-247.compute-1.amazonaws.com",
            "public_ip": "54.159.86.247",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.terraform",
            "aws_key_pair.key-pair",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:899271280563:instance/i-01375b9ff9fd6b3cf",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01375b9ff9fd6b3cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-app-rds",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06ebb2cebfdada081",
            "private_dns": "ip-10-0-1-93.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.93",
            "public_ip": "3.237.82.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067f7b9a2593cc8f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0abdc47791aff935b",
            "tags": {
              "Name": "RDS terraform"
            },
            "tags_all": {
              "Name": "RDS terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a77f3c9bed829629"
            ]
          },
          "dependencies": [
            "aws_key_pair.key-pair",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:internet-gateway/igw-0c8d130a972e2c8f1",
            "id": "igw-0c8d130a972e2c8f1",
            "owner_id": "899271280563",
            "tags": {
              "Name": "gateway_internet"
            },
            "tags_all": {
              "Name": "gateway_internet"
            },
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:899271280563:loadbalancer/app/apprds-lb-tf/a66907539f060ea3",
            "arn_suffix": "app/apprds-lb-tf/a66907539f060ea3",
            "desync_mitigation_mode": "defensive",
            "dns_name": "apprds-lb-tf-924313309.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:899271280563:loadbalancer/app/apprds-lb-tf/a66907539f060ea3",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "apprds-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0857e40a1a1786f33"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0abdc47791aff935b"
              },
              {
                "subnet_id": "subnet-0b0bb9166bc1ea688"
              }
            ],
            "subnets": [
              "subnet-0abdc47791aff935b",
              "subnet-0b0bb9166bc1ea688"
            ],
            "tags": {
              "Name": "app-db-elb"
            },
            "tags_all": {
              "Name": "app-db-elb"
            },
            "vpc_id": "vpc-03c2efa1955f934f5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_b",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:899271280563:listener/app/apprds-lb-tf/a66907539f060ea3/2d7f2fc81d9b0bca",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:899271280563:targetgroup/example-target-group/2e61bb1c47597984",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:899271280563:listener/app/apprds-lb-tf/a66907539f060ea3/2d7f2fc81d9b0bca",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:899271280563:loadbalancer/app/apprds-lb-tf/a66907539f060ea3",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.example",
            "aws_lb_target_group.example",
            "aws_security_group.elb_sg",
            "aws_subnet.public_subnet",
            "aws_subnet.public_subnet_b",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:899271280563:targetgroup/example-target-group/2e61bb1c47597984",
            "arn_suffix": "targetgroup/example-target-group/2e61bb1c47597984",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:899271280563:targetgroup/example-target-group/2e61bb1c47597984",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "example_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:899271280563:targetgroup/example-target-group/2e61bb1c47597984-20230613172052442700000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:899271280563:targetgroup/example-target-group/2e61bb1c47597984",
            "target_id": "i-01375b9ff9fd6b3cf"
          },
          "dependencies": [
            "aws_instance.terraform",
            "aws_key_pair.key-pair",
            "aws_lb_target_group.example",
            "aws_security_group.public_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:route-table/rtb-041f362ddeed88136",
            "id": "rtb-041f362ddeed88136",
            "owner_id": "899271280563",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8d130a972e2c8f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway_internet",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c785c208332163b6",
            "route_table_id": "rtb-041f362ddeed88136",
            "subnet_id": "subnet-0abdc47791aff935b"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_internet",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b77c9c3e78e63cb",
            "route_table_id": "rtb-041f362ddeed88136",
            "subnet_id": "subnet-0b0bb9166bc1ea688"
          },
          "dependencies": [
            "aws_internet_gateway.gateway_internet",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_b",
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:security-group/sg-0500edec5fe07017e",
            "description": "Grupo de Seguranca do ASG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0500edec5fe07017e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Trafego HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Trafego HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "asg_sg",
            "name_prefix": "",
            "owner_id": "899271280563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "asg_sg"
            },
            "tags_all": {
              "Name": "asg_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:security-group/sg-0857e40a1a1786f33",
            "description": "Acesso a partir do ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0857e40a1a1786f33",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Trafego HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Trafego HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "elb_sg",
            "name_prefix": "",
            "owner_id": "899271280563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb_sg"
            },
            "tags_all": {
              "Name": "elb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:security-group/sg-0a77f3c9bed829629",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a77f3c9bed829629",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "170.82.180.128/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public_security_group20230613171939873900000001",
            "name_prefix": "public_security_group",
            "owner_id": "899271280563",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public_security_group"
            },
            "tags_all": {
              "Name": "public_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:subnet/subnet-09dd08399535bbbfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dd08399535bbbfa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899271280563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_a"
            },
            "tags_all": {
              "Name": "private_subnet_a"
            },
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:subnet/subnet-0f3d5662e68193969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3d5662e68193969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899271280563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet_b"
            },
            "tags_all": {
              "Name": "private_subnet_b"
            },
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:subnet/subnet-0abdc47791aff935b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abdc47791aff935b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899271280563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_a"
            },
            "tags_all": {
              "Name": "public_subnet_a"
            },
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:subnet/subnet-0b0bb9166bc1ea688",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0bb9166bc1ea688",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "899271280563",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet_b"
            },
            "tags_all": {
              "Name": "public_subnet_b"
            },
            "vpc_id": "vpc-03c2efa1955f934f5"
          },
          "dependencies": [
            "aws_vpc.apprds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "apprds_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:899271280563:vpc/vpc-03c2efa1955f934f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d360b9843b2f7703",
            "default_route_table_id": "rtb-0d0ac91bdecb0b6ab",
            "default_security_group_id": "sg-0bf313a422ebcbbc5",
            "dhcp_options_id": "dopt-0bb45ff67a545336a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c2efa1955f934f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d0ac91bdecb0b6ab",
            "owner_id": "899271280563",
            "tags": {
              "Name": "VPC app-rds"
            },
            "tags_all": {
              "Name": "VPC app-rds"
            }
          }
        }
      ]
    }
  ]
}